--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ pycparser==2.21
 pydantic==1.8.2
 python-dotenv==0.19.2
 python-jose==3.3.0
+python-multipart==0.0.5
 PyYAML==6.0
 rsa==4.8
 six==1.16.0
