--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.7.5
 anyio==3.4.0
 asgiref==3.4.1
 bcrypt==3.2.0
@@ -10,6 +11,10 @@ greenlet==1.1.2
 h11==0.12.0
 httptools==0.3.0
 idna==3.3
+importlib-metadata==4.10.0
+importlib-resources==5.4.0
+Mako==1.1.6
+MarkupSafe==2.0.1
 mysqlclient==2.1.0
 passlib==1.7.4
 pyasn1==0.4.8
@@ -29,3 +34,4 @@ uvicorn==0.16.0
 uvloop==0.16.0
 watchgod==0.7
 websockets==10.1
+zipp==3.7.0
