--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -4,15 +4,13 @@ FROM nginx:1.21.5
 #ENV https_proxy http://xxx.jp:7080
 #ENV NO_PROXY 169.254.169.254
 
-RUN apt update
+RUN apt update && \
+    apt install locales -y
+#    apt install -y iputils-ping net-tools
 
-RUN apt install locales -y && \
-    echo 'ja_JP.UTF-8 UTF-8' >> /etc/locale.gen && \
+RUN echo 'ja_JP.UTF-8 UTF-8' >> /etc/locale.gen && \
     locale-gen && \
     update-locale LANG=ja_JP.UTF-8
-
-# debug package
-# RUN apt install -y iputils-ping net-tools
 
 RUN ln -sf /usr/share/zoneinfo/Asia/Tokyo /etc/localtime
 
