--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,8 +1,13 @@
 FROM python:3.8.12-slim-bullseye
 
-#ENV http_proxy http://xxx.jp:7080
-#ENV https_proxy http://xxx.jp:7080
-#ENV NO_PROXY 169.254.169.254
+ARG proxy
+ARG no_proxy
+
+ENV http_proxy=$proxy
+ENV https_proxy=$proxy
+ENV NO_PROXY=$no_proxy
+
+RUN printenv
 
 RUN apt update && \
     apt install -y locales gcc libmariadb-dev
@@ -12,13 +17,13 @@ RUN echo 'ja_JP.UTF-8 UTF-8' >> /etc/locale.gen && \
     locale-gen && \
     update-locale LANG=ja_JP.UTF-8
 
+RUN ln -sf /usr/share/zoneinfo/Asia/Tokyo /etc/localtime
+
 #RUN cd /tmp && \
 #    curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64-2.0.30.zip" -o "awscliv2.zip" && \
 #    unzip awscliv2.zip && \
 #    ./aws/install && \
 #    rm -r aws awscliv2.zip
-
-RUN ln -sf /usr/share/zoneinfo/Asia/Tokyo /etc/localtime
 
 RUN mkdir -p /opt/app
 WORKDIR /opt/app
