--- a/sample.env
+++ b/sample.env
@@ -1,8 +1,12 @@
-DB_DIALECT=xxxxxxxx
-DB_DRIVER=xxxxxxxx
+APP_NAME=fastapi-sample
+STAGE_NAME=lo1
+MODE=dev
+AWS_REGION=ap-northeast-1
+DB_DIALECT=mysql
+DB_DRIVER=mysqldb
 DB_USER=xxxxxxxx
 DB_PASSWORD=xxxxxxxx
-DB_HOST=xxxxxxxx
-DB_PORT=xxxxxxxx
-DB_NAME=xxxxxxxx
-SECRET_KEY = xxxxxxxx
+DB_HOST=xxxxxxxx.xxxxxxxxxxxxxxxxxxx.ap-northeast-1.rds.amazonaws.com
+DB_PORT=3306
+DB_NAME=fastapi_quickstart
+SECRET_KEY=xxxxxxxx
