--- a/docker/tool/Dockerfile
+++ b/docker/tool/Dockerfile
@@ -26,9 +26,9 @@ RUN ln -sf /usr/share/zoneinfo/Asia/Tokyo /etc/localtime
 
 RUN mkdir -p /opt/app
 WORKDIR /opt/app
-COPY requirements.txt ./
+COPY requirements_dev.txt ./
 RUN pip install --upgrade pip && \
-    pip install -r requirements.txt
+    pip install -r requirements_dev.txt
 COPY . .
 
 CMD ["/bin/bash"]
